css/index-style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  min-width: 100vw;
  max-width: 100vw;
  color: var(--negro);
  font-family: "Arimo", sans-serif;
  overflow-x: hidden;
  scroll-behavior: smooth;
}
ul {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
:root {
  --amarillo: #f2cb05;
  --negro: #1d1d1d;
}
.row,
.col,
.col-3,
.col-4,
.col-6,
.col-12,
.container {
  padding: 0;
  margin: 0;
}
a,
ul li {
  text-decoration: none;
  list-style: none;
  color: white;
}
h4 {
  text-align: center;
  text-transform: uppercase;
  padding: 20% 0;
  font-size: 1.7rem;
  font-weight: 700;
  margin: 0 auto;
}
p {
  font-family: "Arimo", sans-serif;
  font-size: 1rem;
  text-align: center;
  text-wrap: balance;
}

/* NAV */
.nav {
  position: fixed;
  z-index: 100;
  min-width: 100vw;
  max-width: 100vw;
  top: 0;
  left: 0;
}
#navbar {
  min-width: 100vw;
  max-width: 100vw;
  z-index: 10;
  background-color: var(--negro);
  text-transform: uppercase;
}
#navbar > .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-width: 80vw;
  max-width: 80vw;
  min-height: 10vh;
  max-height: 10vh;
  padding: 0;
  margin: 0 auto;
}
.nav-item {
  list-style: none;
  text-decoration: none;
  font-weight: bold;
}
.nav-link {
  font-size: 0.5rem;
  color: var(--negro);
}
.nav-link:hover,
.nav-link:active,
.nav-link:visited {
  color: var(--negro);
}
#menu-icon {
  color: white;
  font-size: 1.5rem;
}
#menu-content {
  display: none;
  justify-content: space-evenly;
  position: absolute;
  left: 0;
  top: 10vh;
  min-width: 100%;
  max-width: 100%;
  flex-direction: row;
  background-color: var(--amarillo);
}
#brand-img {
  min-width: 4rem;
  max-width: 6.5rem;
}

/* LANDING SECTION */
#landing-page {
  padding-top: 10vh;
}
.landing-page-header {
  display: block;
  position: absolute;
  top: 12vh;
  left: 50%;
  transform: translate(-50%);
  color: white;
  text-align: center;
  z-index: 2;
}
.landing-page-header p {
  margin: 10px;
  font-size: 1.2rem;
}
.landing-page-header h2 {
  font-family: "Anton", sans-serif;
  text-transform: uppercase;
  font-size: 3rem;
  width: 70vw;
  line-height: 4.5rem;
  text-wrap: balance;
}
/* CAROUSEL */
.carousel-img {
  object-fit: cover;
  min-width: 100vw;
  max-width: 100vw;
  min-height: 90vh;
  max-height: 90vh;
  filter: brightness(0.5);
}

/* ARRIVE SECTION */
#arrive {
  text-align: center;
}
.arrive-text-container {
  margin: 0px auto;
  min-width: 80vw;
  max-width: 80vw;
}
.arrive-text-container p {
  padding-bottom: 20%;
  text-align: center;
  text-wrap: balance;
}
#arrive > .container {
  padding: 0px;
  min-width: 80%;
  max-width: 80%;
}

/* FOUND US SECTION */
#found-us {
  position: relative;
  color: WHITE;
}
#found-us .btn-style {
  min-width: 250px;
}
#found-us .btn-style:hover {
  background-color: var(--amarillo);
  color: var(--negro);
}
#found-us > .container {
  margin-top: 10vh;
  margin-bottom: 10vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
}
#found-us-data {
  display: none;
}
#found-us-anchor {
  min-width: 100vw;
  max-width: 100vw;
  min-height: 10vh;
  max-height: 10vh;
}

/* SUCURSALES */
.sucursales-container-img {
  min-height: 40vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.text {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Rajdhani", sans-serif;
  font-size: 1.8rem;
  text-align: center;
  text-transform: uppercase;
  position: absolute;
  font-weight: 700;
  margin: 0;
}
.text-yellow {
  color: var(--amarillo);
}
.img-locales {
  min-width: 100%;
  max-width: 100%;
  min-height: 40vh;
  max-height: 40vh;
  object-fit: cover;
  filter: brightness(0.4);
}

/* COMENTS */
#coments {
  display: flex;
  align-items: center;
  background-image: url("../resources/inicio/clientes.webp");
  min-width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
.coments-data {

  margin: 0px auto;
  min-width: 80%;
  max-width: 80%;
}
#coments .row {
  display: flex;
  margin-bottom: 10vh;
}
.coment-body {
  background-color: var(--negro);
  border-radius: 15px;
  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
  color: white;
  margin-bottom: 1rem;
}
.coment-body p {
  margin: 0 auto;
  padding: 10%;
  font-style: italic;
  font-weight: 400;
  font-size: 1rem;
}
.profile-icon {
  max-width: 50%;
  margin: 10%;
}
.coment-body .container {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.coment-name {
  padding: 5%;
  color: var(--amarillo);
  text-transform: capitalize;
  font-weight: bold;
  text-align: right;
}

/* UTILS */
.line {
  display: flex;
  width: 150px;
  margin: 0px auto;
  border-bottom: 1px solid white;
}
.medium-line-dark {
  height: 2px;
  width: 150px;
  background-color: var(--negro);
  margin: 0px 10px;
}
.bg-darker {
  min-width: 100vw;
  max-width: 100vw;
  background-color: var(--negro);
}


/* CARDS */
.cards-container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
}
.card-body {
  min-width: 80%;
  max-width: 80%;
  margin: 0 auto;
  border-radius: 15px;
  background-color: var(--negro);
  margin-bottom: 2rem;
}
.card-img {
  background-position: center;
  object-fit: cover;
  min-height: 30vh;
  max-height: 30vh;
  padding: 0px !important;
}
.card-img-container {
  border-radius: 15px 15px 0px 0px;
}
.card-img-container img {
  border-radius: 10px 10px 0px 0px;
  border-bottom: 1px solid var(--amarillo);
}
.card-text {
  max-width: 90%;
  margin: 0 auto;
}
.card-text > h3 {
  font-weight: bold;
  padding: 10px;
  color: var(--amarillo);
  text-transform: uppercase;
}
.badge-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.badge {
  background-color: var(--amarillo);
  color: black;
  padding: 8px;
  margin: 0.5rem;
  font-size: 0.8rem;
}
.btn-style {
  color: var(--negro);
  font-weight: bold;
  padding: 10px;
  border-radius: 5px;
  border: none;
  margin: 10px 0;
  background-color: transparent;
}
.btn-link {
  display: inline-flex;
  justify-content: center;
  min-width: 150px;
  padding: 12px;
  font-size: 1.2em;
  border-radius: 10px;
  text-decoration: none;
  color: white;
  border: 0.5px solid var(--amarillo);
}
.btn-link:hover {
  background-color: var(--amarillo);
  color: var(--negro);
}

/* #BEST BURGER */
#best-burger {
  display: flex;
  min-width: 100vw;
  max-width: 100vw;
  min-height: 40vh;
}
#best-burger h2 {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  align-items: center;
  font-size: 4rem;
  font-family: "Vujahday Script", cursive;
  color: var(--amarillo);
  min-height: 40vh;
  max-height: 40vh;
  text-align: center;
}
#best-burger .container {
  display: flex;
  justify-content: center;
  align-items: center;
}
.best-burger-img {
  min-width: 100%;
  max-width: 100%;
  filter: brightness(0.35);
}

/* MENU SECTION */
#menu {
  display: flex;
  flex-direction: column;
  min-width: 100vw;
  max-width: 100vw;
}
.menu-tittle .container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  min-width: 80vw;
  max-width: 80vw;
}
.menu-tittle:first-child p {
  padding-bottom: 10%;
  text-align: center;
  color: var(--negro);
}

#menu .container:last-child {
  color: white;
}
.text-white{
  color: white;
}
#menu h4 {
  color: var(--amarillo);
}
#menu .row {
  max-width: 80%;
  margin: 0 auto;
  justify-content: center;
}
.menu-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding-bottom: 10%;
}
.menu-card-img img {
  width: 250px;
  height: 250px;
  border-radius: 200px;
  border: 3px solid var(--amarillo);
  object-fit: cover;
}
.menu-card h3 {
  padding: 10% 0;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 1.7rem;
  color: var(--amarillo);
}

/* ABOUT */
#about {
  display: flex;
  position: relative;
  flex-direction: column;
  min-width: 100vw;
  max-width: 100vw;
}
#about-us-team {
  background-color: var(--negro);
  color: white;
}
#about .row {
  max-width: 80vw;
  margin: 0 auto;
  margin-bottom: 10%;
}
#about p {
  text-align: center;
  padding-bottom: 10%;
}
#about-landing {
  display: flex;
}
.about-img-container {
  display: flex;
  flex-direction: column;
  padding: 0;
  border-top: 5px solid var(--amarillo);
}
.about-img {
  max-width: 100%;
}
.about-header {
  text-transform: uppercase;
  color: white;
  position: absolute;
  left: 50%;
  top: 20px;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Anton", sans-serif;
}
.about-header h2 {
  font-size: 3.5rem;
}
.about-header h4 {
  color: white;
  padding: 0;
  font-size: 1.2rem;
  color: var(--amarillo);
}
.us-img {
  max-width: 100%;
  border-radius: 10px;
}
#about-us {
  max-width: 80vw;
  margin: 0 auto;
}
/* FOOTER */
#footer {
  min-width: 100vw;
  max-width: 100vw;
  background-color: var(--amarillo);
}
.social-media {
  min-width: 80%;
  max-width: 80%;
  display: flex;
  justify-content: space-between;
  padding: 1rem 0;
  margin: 0 auto;
}
.social-media ion-icon {
  color: var(--negro);
  font-size: 2rem;
}
.copy-right {
  color: white;
  background-color: var(--negro);
  text-align: center;
  font-size: 0.7rem;
}
.copy-right .container {
  min-width: 80vw;
  max-width: 80vw;
  min-height: 10vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
}

/* MEDIA QUERYS */
@media (min-width: 768px) {
  h4 {
    padding: 10% 0;
  }
  .line {
    width: 250px;
    margin: 20px auto;
  }
  .arrive-text-container p {
    padding-bottom: 10%;
  }
  .cards-container .row {
    min-width: 80vw;
    max-width: 80vw;
    margin: 0 auto;
  }
  .card-body {
    min-width: 90%;
    max-width: 90%;
  }
  .card-text h3 {
    font-size: 1.5rem;
  }
  .profile-icon {
    max-width: 40%;
  }
  #best-burger {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  #best-burger h2 {
    font-size: 6rem;
  }
  .best-burger-img {
    min-height: 60vh;
    max-height: 60vh;
    object-fit: cover;
  }
  .social-media ion-icon {
    font-size: 2.5rem;
  }
  .copy-right span {
    font-size: 0.8rem;
  }
}

@media (min-width: 1024px) {
  #menu-icon {
    display: none;
  }
  #menu-content {
    display: flex;
  }
  #brand-img {
    min-width: 200px;
    max-width: 200px;
  }
  .nav-link {
    font-size: 0.8rem;
  }
  p {
    font-size: 1rem;
  }
  #landing-page h2 {
    font-size: 4.5rem;
  }
  .landing-page-header p {
    font-size: 1.5rem;
  }
  .card-text {
    min-height: 20vh;
  }
  .card-text h3 {
    margin: 0 auto;
    max-width: 80%;
    font-size: 1.5rem;
  }
  p {
    font-size: 1.2rem;
  }
  /* MENU ITEMS */
  #menu-items h4 {
    padding: 10% 5%;
    color: var(--amarillo);
  }
  .copy-right .container {
    padding: 1rem 0;
  }
  .copy-right span {
    font-size: 1.1rem;
  }
}

@media (min-width: 1440px) {
  nav-link,
  .copy-right span {
    font-size: 1rem;
  }
  .card-text {
    min-height: 25vh;
    max-width: 90%;
  }
  .badge {
    font-size: 0.9rem;
  }
}

